--- a/multiple_linear_regg/multivariable_linear_regression.ipynb
+++ b/multiple_linear_regg/multivariable_linear_regression.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "       [0.0, 116983.8, 45173.06, 'California']], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +196,16 @@
    "source": [
     "x_test = x\n",
     "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Encoding categorical data using pandas\n",
+    "# df_enc_pandas = pd.get_dummies(x_test, columns=[3])"
    ]
   },
   {
@@ -218,7 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LabelEncoder_x = LabelEncoder()\n",
+    "x[:, 3] = LabelEncoder_x.fit_transform(x[:, 3]) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -276,14 +296,12 @@
        "       [0.0, 116983.8, 45173.06, 0]], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LabelEncoder_x = LabelEncoder()\n",
-    "x[:, 3] = LabelEncoder_x.fit_transform(x[:, 3]) \n",
     "x"
    ]
   },
@@ -297,30 +315,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize OneHotEncoder\n",
+    "encoder = OneHotEncoder(sparse_output=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the last column for encoding\n",
+    "last_column = x[:, -1].reshape(-1, 1)\n",
+    "# last_column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode the last column\n",
+    "one_hot_encoded = encoder.fit_transform(last_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x\n",
+    "new_x = np.hstack((x[:, :-1], one_hot_encoded))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidParameterError",
-     "evalue": "The 'categories' parameter of OneHotEncoder must be a str among {'auto'} or an instance of 'list'. Got array([2, 0, 1, 2, 1, 2, 0, 1, 2, 0, 1, 0, 1, 0, 1, 2, 0, 2, 1, 2, 0, 2,\n       1, 1, 2, 0, 1, 2, 1, 2, 1, 2, 0, 1, 0, 2, 1, 0, 2, 0, 0, 1, 0, 2,\n       0, 2, 1, 0, 2, 0], dtype=object) instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidParameterError\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m onehotencoder \u001b[38;5;241m=\u001b[39m OneHotEncoder(categories\u001b[38;5;241m=\u001b[39m x[:,\u001b[38;5;241m3\u001b[39m])\n\u001b[1;32m----> 2\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43monehotencoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mtoarray()\n\u001b[0;32m      3\u001b[0m x\n",
-      "File \u001b[1;32md:\\Projects ML\\AI_ML\\reg_env\\Lib\\site-packages\\sklearn\\utils\\_set_output.py:157\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    155\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[0;32m    156\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 157\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    158\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    159\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    160\u001b[0m         return_tuple \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    161\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    162\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[0;32m    163\u001b[0m         )\n",
-      "File \u001b[1;32md:\\Projects ML\\AI_ML\\reg_env\\Lib\\site-packages\\sklearn\\base.py:916\u001b[0m, in \u001b[0;36mTransformerMixin.fit_transform\u001b[1;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[0;32m    912\u001b[0m \u001b[38;5;66;03m# non-optimized default implementation; override when a better\u001b[39;00m\n\u001b[0;32m    913\u001b[0m \u001b[38;5;66;03m# method is possible for a given clustering algorithm\u001b[39;00m\n\u001b[0;32m    914\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    915\u001b[0m     \u001b[38;5;66;03m# fit method of arity 1 (unsupervised transformation)\u001b[39;00m\n\u001b[1;32m--> 916\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mfit_params\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mtransform(X)\n\u001b[0;32m    917\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    918\u001b[0m     \u001b[38;5;66;03m# fit method of arity 2 (supervised transformation)\u001b[39;00m\n\u001b[0;32m    919\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfit(X, y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mfit_params)\u001b[38;5;241m.\u001b[39mtransform(X)\n",
-      "File \u001b[1;32md:\\Projects ML\\AI_ML\\reg_env\\Lib\\site-packages\\sklearn\\base.py:1145\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1140\u001b[0m partial_fit_and_fitted \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m   1141\u001b[0m     fit_method\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpartial_fit\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m _is_fitted(estimator)\n\u001b[0;32m   1142\u001b[0m )\n\u001b[0;32m   1144\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m global_skip_validation \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m partial_fit_and_fitted:\n\u001b[1;32m-> 1145\u001b[0m     \u001b[43mestimator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_params\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1147\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m   1148\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m   1149\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m   1150\u001b[0m     )\n\u001b[0;32m   1151\u001b[0m ):\n\u001b[0;32m   1152\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32md:\\Projects ML\\AI_ML\\reg_env\\Lib\\site-packages\\sklearn\\base.py:638\u001b[0m, in \u001b[0;36mBaseEstimator._validate_params\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    630\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_validate_params\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    631\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Validate types and values of constructor parameters\u001b[39;00m\n\u001b[0;32m    632\u001b[0m \n\u001b[0;32m    633\u001b[0m \u001b[38;5;124;03m    The expected type and values must be defined in the `_parameter_constraints`\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    636\u001b[0m \u001b[38;5;124;03m    accepted constraints.\u001b[39;00m\n\u001b[0;32m    637\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 638\u001b[0m     \u001b[43mvalidate_parameter_constraints\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    639\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parameter_constraints\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    640\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_params\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdeep\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    641\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcaller_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__class__\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__name__\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    642\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Projects ML\\AI_ML\\reg_env\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:96\u001b[0m, in \u001b[0;36mvalidate_parameter_constraints\u001b[1;34m(parameter_constraints, params, caller_name)\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     91\u001b[0m     constraints_str \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m     92\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mstr\u001b[39m(c)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39mc\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mconstraints[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m or\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     93\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconstraints[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     94\u001b[0m     )\n\u001b[1;32m---> 96\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m InvalidParameterError(\n\u001b[0;32m     97\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparam_name\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m parameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcaller_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     98\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconstraints_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparam_val\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     99\u001b[0m )\n",
-      "\u001b[1;31mInvalidParameterError\u001b[0m: The 'categories' parameter of OneHotEncoder must be a str among {'auto'} or an instance of 'list'. Got array([2, 0, 1, 2, 1, 2, 0, 1, 2, 0, 1, 0, 1, 0, 1, 2, 0, 2, 1, 2, 0, 2,\n       1, 1, 2, 0, 1, 2, 1, 2, 1, 2, 0, 1, 0, 2, 1, 0, 2, 0, 0, 1, 0, 2,\n       0, 2, 1, 0, 2, 0], dtype=object) instead."
-     ]
+     "data": {
+      "text/plain": [
+       "array([[165349.2, 136897.8, 471784.1, 0.0, 0.0, 1.0],\n",
+       "       [162597.7, 151377.59, 443898.53, 1.0, 0.0, 0.0],\n",
+       "       [153441.51, 101145.55, 407934.54, 0.0, 1.0, 0.0],\n",
+       "       [144372.41, 118671.85, 383199.62, 0.0, 0.0, 1.0],\n",
+       "       [142107.34, 91391.77, 366168.42, 0.0, 1.0, 0.0],\n",
+       "       [131876.9, 99814.71, 362861.36, 0.0, 0.0, 1.0],\n",
+       "       [134615.46, 147198.87, 127716.82, 1.0, 0.0, 0.0],\n",
+       "       [130298.13, 145530.06, 323876.68, 0.0, 1.0, 0.0],\n",
+       "       [120542.52, 148718.95, 311613.29, 0.0, 0.0, 1.0],\n",
+       "       [123334.88, 108679.17, 304981.62, 1.0, 0.0, 0.0],\n",
+       "       [101913.08, 110594.11, 229160.95, 0.0, 1.0, 0.0],\n",
+       "       [100671.96, 91790.61, 249744.55, 1.0, 0.0, 0.0],\n",
+       "       [93863.75, 127320.38, 249839.44, 0.0, 1.0, 0.0],\n",
+       "       [91992.39, 135495.07, 252664.93, 1.0, 0.0, 0.0],\n",
+       "       [119943.24, 156547.42, 256512.92, 0.0, 1.0, 0.0],\n",
+       "       [114523.61, 122616.84, 261776.23, 0.0, 0.0, 1.0],\n",
+       "       [78013.11, 121597.55, 264346.06, 1.0, 0.0, 0.0],\n",
+       "       [94657.16, 145077.58, 282574.31, 0.0, 0.0, 1.0],\n",
+       "       [91749.16, 114175.79, 294919.57, 0.0, 1.0, 0.0],\n",
+       "       [86419.7, 153514.11, 0.0, 0.0, 0.0, 1.0],\n",
+       "       [76253.86, 113867.3, 298664.47, 1.0, 0.0, 0.0],\n",
+       "       [78389.47, 153773.43, 299737.29, 0.0, 0.0, 1.0],\n",
+       "       [73994.56, 122782.75, 303319.26, 0.0, 1.0, 0.0],\n",
+       "       [67532.53, 105751.03, 304768.73, 0.0, 1.0, 0.0],\n",
+       "       [77044.01, 99281.34, 140574.81, 0.0, 0.0, 1.0],\n",
+       "       [64664.71, 139553.16, 137962.62, 1.0, 0.0, 0.0],\n",
+       "       [75328.87, 144135.98, 134050.07, 0.0, 1.0, 0.0],\n",
+       "       [72107.6, 127864.55, 353183.81, 0.0, 0.0, 1.0],\n",
+       "       [66051.52, 182645.56, 118148.2, 0.0, 1.0, 0.0],\n",
+       "       [65605.48, 153032.06, 107138.38, 0.0, 0.0, 1.0],\n",
+       "       [61994.48, 115641.28, 91131.24, 0.0, 1.0, 0.0],\n",
+       "       [61136.38, 152701.92, 88218.23, 0.0, 0.0, 1.0],\n",
+       "       [63408.86, 129219.61, 46085.25, 1.0, 0.0, 0.0],\n",
+       "       [55493.95, 103057.49, 214634.81, 0.0, 1.0, 0.0],\n",
+       "       [46426.07, 157693.92, 210797.67, 1.0, 0.0, 0.0],\n",
+       "       [46014.02, 85047.44, 205517.64, 0.0, 0.0, 1.0],\n",
+       "       [28663.76, 127056.21, 201126.82, 0.0, 1.0, 0.0],\n",
+       "       [44069.95, 51283.14, 197029.42, 1.0, 0.0, 0.0],\n",
+       "       [20229.59, 65947.93, 185265.1, 0.0, 0.0, 1.0],\n",
+       "       [38558.51, 82982.09, 174999.3, 1.0, 0.0, 0.0],\n",
+       "       [28754.33, 118546.05, 172795.67, 1.0, 0.0, 0.0],\n",
+       "       [27892.92, 84710.77, 164470.71, 0.0, 1.0, 0.0],\n",
+       "       [23640.93, 96189.63, 148001.11, 1.0, 0.0, 0.0],\n",
+       "       [15505.73, 127382.3, 35534.17, 0.0, 0.0, 1.0],\n",
+       "       [22177.74, 154806.14, 28334.72, 1.0, 0.0, 0.0],\n",
+       "       [1000.23, 124153.04, 1903.93, 0.0, 0.0, 1.0],\n",
+       "       [1315.46, 115816.21, 297114.46, 0.0, 1.0, 0.0],\n",
+       "       [0.0, 135426.92, 0.0, 1.0, 0.0, 0.0],\n",
+       "       [542.05, 51743.15, 0.0, 0.0, 0.0, 1.0],\n",
+       "       [0.0, 116983.8, 45173.06, 1.0, 0.0, 0.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# onehotencoder = OneHotEncoder(categories= x[:,3])\n",
-    "# x = onehotencoder.fit_transform(x).toarray()\n",
-    "# x"
+    "new_x"
    ]
   },
   {
