--- a/one_hotcoding/onehotcode_pandas.ipynb
+++ b/one_hotcoding/onehotcode_pandas.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implement on simple dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -183,25 +190,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Another example"
+    "#### Implement on Compund Dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "data = {\n",
     "    'Employee_ID': [101, 102, 103, 104, 105, 106, 107, 108, 109, 110],\n",
     "    'Gender': ['Male', 'Female', 'Male', 'Male', 'Male', 'Female', 'Male', 'Female', 'Male', 'Female'],\n",
     "    'Remark': ['Excellent', 'Good', 'Excellent', 'Average', 'Good', 'Excellent', 'Average', 'Good', 'Excellent', 'Average']\n",
-    "}\n"
+    "}\n",
+    "print(type(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +325,7 @@
        "9          110  Female    Average"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +356,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +388,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +601,7 @@
        "9            0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,9 +620,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -671,7 +694,7 @@
        "4  Green     3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,8 +709,16 @@
     "    ['Red', 1],\n",
     "    ['Green', 3]\n",
     "])\n",
+    "print(type(data_array))\n",
+    "\n",
+    "# *********************************************************************************************\n",
+    "\n",
     "\n",
     "# Convert the array to a pandas DataFrame\n",
+    "\n",
+    "\"\"\" If i want implement dummies on this data then i have to convert this data into dataframe.\n",
+    "    So, first i have to convert this data into dataframe and then i can implement dummies on it.\n",
+    "\"\"\"\n",
     "df = pd.DataFrame(data_array, columns=['Color', 'Value'])\n",
     "\n",
     "df"
@@ -695,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -727,33 +758,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -761,27 +792,30 @@
       ],
       "text/plain": [
        "   Color_Blue  Color_Green  Color_Red\n",
-       "0       False        False       True\n",
-       "1        True        False      False\n",
-       "2       False         True      False\n",
-       "3       False        False       True\n",
-       "4       False         True      False"
+       "0           0            0          1\n",
+       "1           1            0          0\n",
+       "2           0            1          0\n",
+       "3           0            0          1\n",
+       "4           0            1          0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use get_dummies on the 'Color' column\n",
-    "dummies_df = pd.get_dummies(df['Color'], prefix='Color')\n",
+    "\n",
+    "# dummies_df = pd.get_dummies(df['Color'], prefix='Color')\n",
+    "dummies_df = pd.get_dummies(df['Color'], prefix='Color',dtype='int64')\n",
+    "\n",
     "dummies_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -817,41 +851,41 @@
        "      <th>0</th>\n",
        "      <td>Red</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Blue</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Green</td>\n",
        "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Red</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Green</td>\n",
        "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -859,14 +893,14 @@
       ],
       "text/plain": [
        "   Color Value  Color_Blue  Color_Green  Color_Red\n",
-       "0    Red     1       False        False       True\n",
-       "1   Blue     2        True        False      False\n",
-       "2  Green     3       False         True      False\n",
-       "3    Red     1       False        False       True\n",
-       "4  Green     3       False         True      False"
+       "0    Red     1           0            0          1\n",
+       "1   Blue     2           1            0          0\n",
+       "2  Green     3           0            1          0\n",
+       "3    Red     1           0            0          1\n",
+       "4  Green     3           0            1          0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,18 +914,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Red' '1' False False True]\n",
-      " ['Blue' '2' True False False]\n",
-      " ['Green' '3' False True False]\n",
-      " ['Red' '1' False False True]\n",
-      " ['Green' '3' False True False]]\n"
+      "[['Red' '1' 0 0 1]\n",
+      " ['Blue' '2' 1 0 0]\n",
+      " ['Green' '3' 0 1 0]\n",
+      " ['Red' '1' 0 0 1]\n",
+      " ['Green' '3' 0 1 0]]\n"
      ]
     }
    ],
