initil theory Image added done

--- a/Clustering/K-NNN/k-nnn_classifier.ipynb
+++ b/Clustering/K-NNN/k-nnn_classifier.ipynb
@@ -379,6 +379,41 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theory\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](k1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](k2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](k3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](k4.png)"
+   ]
   }
  ],
  "metadata": {
