--- a/Clustering/Random-Forest/random_forest_classifier.ipynb
+++ b/Clustering/Random-Forest/random_forest_classifier.ipynb
@@ -358,6 +358,20 @@
     "# plt.legend()\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](rf1.png)"
+   ]
   }
  ],
  "metadata": {
