--- a/Clustering/SVM/SVM-classifier.ipynb
+++ b/Clustering/SVM/SVM-classifier.ipynb
@@ -122,6 +122,34 @@
     "print(cm)\n",
     "accuracy_score(y_test, y_pred)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](svm1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](svm2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](svm3.png)"
+   ]
   }
  ],
  "metadata": {
