--- a/Clustering/logistic-regression/logistic-regr-classifier.ipynb
+++ b/Clustering/logistic-regression/logistic-regr-classifier.ipynb
@@ -1729,6 +1729,41 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](lg1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](lg2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](lg3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![p.png](lg4.png)"
+   ]
   }
  ],
  "metadata": {
