--- a/Clustering/Decision-Tree/decision_tree_classifier.ipynb
+++ b/Clustering/Decision-Tree/decision_tree_classifier.ipynb
@@ -358,6 +358,41 @@
     "# plt.legend()\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](dt1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](dt2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](dt3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img.png](dt4.png)"
+   ]
   }
  ],
  "metadata": {
